--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -3,7 +3,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/indigo" />
 
+    <!-- You can insert your own image assets here -->
     <item>
-        <bitmap android:gravity="center" android:src="@drawable/launch_image" />
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/frame" />
     </item>
 </layer-list>
